# Exo

./: .copilot-instructions.md  .copilotignore  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  DOCKER_DEPLOYMENT.md  Dockerfile  ENV_REFERENCE.md  FISH_SPEECH_DEPLOYMENT.md  IMPLEMENTATION_PHASE3_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  PI_SETUP.md  PROMPT_MAITRE.md  QUICKSTART.md  README.md  SETUP.md  VOICE_INTEGRATION.md  copy_exo_logs.ps1  create_shortcut.py  docker-compose.yml  launch_exo.ps1  launch_exo.pyw  launch_exo_silent.ps1  main.py  migrate_project_to_root.ps1  pyproject.toml  requirements-base.txt  requirements-ml.txt  requirements.txt  test_fr_frontend.py  test_tts_bench.py  test_tts_bench_v2.py  test_tts_client.py  test_tts_fr_pipeline.py  verify_installation.py
.archive/: AUDIT_PIPELINE_COMPLET.md  migrate_exo_to_project.ps1
.archive/2026-05-14-cleanup/: IMPLEMENTATION_PHASE3_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  copy_exo_logs.py  remove_project.ps1
.archive/root_orphans/: capture_orpheus_stream.py
app/: main.cpp
app/audio/: AudioAnomalyDetector.cpp  AudioAnomalyDetector.h  AudioAutoCorrector.cpp  AudioAutoCorrector.h  AudioDeviceManager.cpp  AudioDeviceManager.h  AudioInput.h  AudioInputQt.cpp  AudioInputQt.h  AudioInputRtAudio.cpp  AudioInputRtAudio.h  AudioProfiler.cpp  AudioProfiler.h  TTSAudioSinkRtAudio.cpp  TTSAudioSinkRtAudio.h  TTSBackend.h  TTSBackendQt.cpp  TTSBackendQt.h  TTSBackendXTTS.cpp  TTSBackendXTTS.h  TTSManager.cpp  TTSManager.h  VoicePipeline.cpp  VoicePipeline.h
app/core/: AssistantComponentFactory.cpp  AssistantComponentFactory.h  AssistantConnectionBinder.cpp  AssistantConnectionBinder.h  AssistantErrorManager.cpp  AssistantErrorManager.h  AssistantFastPathEngine.cpp  AssistantFastPathEngine.h  AssistantLifecycleManager.cpp  AssistantLifecycleManager.h  AssistantManager.cpp  AssistantManager.h  AssistantMessageRouter.cpp  AssistantMessageRouter.h  AssistantPromptBuilder.cpp  AssistantPromptBuilder.h  AssistantQmlExposer.cpp  AssistantQmlExposer.h  AssistantSafeBootFacade.cpp  AssistantSafeBootFacade.h  AssistantToolDispatcher.cpp  AssistantToolDispatcher.h  ConfigManager.cpp  ConfigManager.h  ContextCache.cpp  ContextCache.h  ErrorManager.cpp  ErrorManager.h  HealthCheck.cpp  HealthCheck.h  LatencyMetrics.cpp  LatencyMetrics.h  LogManager.cpp  LogManager.h  MetricsManager.cpp  MetricsManager.h  PipelineEvent.cpp  PipelineEvent.h  PipelineTracer.cpp  PipelineTracer.h  (+15 more)
app/floorplan/: FloorPlanController.cpp  FloorPlanController.h  FloorPlanEnums.h  FloorPlanItem.cpp  FloorPlanItem.h  FloorPlanModel.cpp  FloorPlanModel.h  FloorPlanSerializer.cpp  FloorPlanSerializer.h
app/llm/: AIMemoryManager.cpp  AIMemoryManager.h  ClaudeAPI.cpp  ClaudeAPI.h
app/safeboot/: SafeBootAutoRepair.cpp  SafeBootAutoRepair.h  SafeBootController.cpp  SafeBootController.h  SafeBootEnums.h  SafeBootState.h  SafeBootTimeline.h
app/simulation/: SimulationController.cpp  SimulationController.h  SimulationEngine.cpp  SimulationEngine.h  SimulationEntity.cpp  SimulationEntity.h  SimulationEnums.h  SimulationPropagation.cpp  SimulationPropagation.h  SimulationResult.cpp  SimulationResult.h  SimulationScenario.cpp  SimulationScenario.h
app/spatialcognition/: SpatialCognitiveEngine.cpp  SpatialCognitiveEngine.h  SpatialContext.cpp  SpatialContext.h  SpatialEnums.h  SpatialKnowledgeGraph.cpp  SpatialKnowledgeGraph.h  SpatialMemory.cpp  SpatialMemory.h  SpatialPlanner.cpp  SpatialPlanner.h  SpatialReasoner.cpp  SpatialReasoner.h  SpatialSupervisor.cpp  SpatialSupervisor.h
app/spatialsecurity/: FireDetector.cpp  (+16 more)
config/: assistant.conf.example  environment.example  exo_v9.json  floorplan.json  services.json  user_config.ini
docs/: ACCOMPLISHMENTS_AUDIO_AUDIT.md  ARBORESCENCE_AUDIT.md  AUDIO_AUDIT_INDEX.md  AUDIO_CODE_CHANGES.md  AUDIO_PIPELINE_AUDIT_SUMMARY.md  AUDIO_PIPELINE_COMPLETE_AUDIT.md  AUDIO_PIPELINE_DEPLOYMENT.md  AUDIO_PIPELINE_FIXES.md  AUDIO_QUICKSTART.md  AUDIO_STATUS_FINAL.md  BACKEND_AUDIT.md  COMPLETE_DOCUMENT_INDEX.md  CONTRIBUTING_DOCS.md  COSYVOICE_FR_BINARY_INSTALL.md  COSYVOICE_FR_INSTALL.md  COSYVOICE_INSTALL_AUDIT.md  COSYVOICE_LATENCY_OPTIMIZATION.md  EXO_AUDIT_CORRECTION.md  FINAL_SUMMARY.md  GUI_AUDIT.md  GUI_CONNECTIVITY_AUDIT.md  GUI_DEAD_CODE_AUDIT.md  GUI_MEMORY_AUDIT.md  GUI_PERF_AUDIT.md  GUI_RESTRUCTURE.md  INVENTORY_FINAL_AUDIO_AUDIT.md  MANIFEST_AUDIO_AUDIT.md  PERF_REPORT_J1-J5.md  PERF_REPORT_J2-J3bis-J4bis.md  PLAN_IMPLEMENTATION.md  README_AUDIO_AUDIT.md  SIGNALS_AUDIT.md  TTS_GPU_POSTSWITCH_VALIDATION.md  TTS_VOICES_FIX.md  UX_REDESIGN_PLAN.md  cosyvoice_latency_metrics.json  index.md  last_update.md  modules.md  pipeline.md  (+1 more)
examples/: demo_conversation.py  pi_satellite.py  run_assistant.py  setup_and_test.ps1  setup_and_test.sh  test_ai.py  test_audio.py  test_conversation.py  test_e2e_pipeline.py  test_e2e_vocal.py  test_performance.py  test_pipeline_monitor.py  test_voice.py  test_wake_word.py
files/: ha_devices.json
python/: start_missing_services.py
qml/: MainWindow.qml
scripts/: _aggregate_profile.ps1  _franc_logs_batch.ps1  audit_orpheus_wav.py  auto_kill_zombies.py  auto_maintain.py  bench_tts_10x.py  bench_tts_5x.py  benchmark_cosyvoice_latency.py  benchmark_stt.py  check_dependencies.ps1  cleanup.ps1  cleanup_phase2.ps1  create_desktop_shortcut.ps1  diagnose_tts_provider.ps1  generate_icon.py  generate_toc.py  inspect_voices.py  install_dependencies.ps1  maintain_docs.py  normalize_docs.py  patch_ujson.ps1  profile_voices.py  quick_build.ps1  runtime_profile_report.ps1  runtime_profiler.ps1  setup_maintenance.ps1  test_environment.ps1  test_french_norm.py  verify_project.ps1  verify_voice_prompts.py
src/: __init__.py  config.py  utils.py
tests/: e2e_tools_test.py
tests/cpp/: CMakeLists.txt  test_audiodevicemanager.cpp  test_audiopreprocessor.cpp  test_circularaudiobuffer.cpp  test_claudeapi.cpp  test_configmanager.cpp  test_healthcheck.cpp  test_pipelineevent.cpp  test_pipelinetracer.cpp  test_safeboot.cpp  test_simulation.cpp  test_tts_dsp.cpp
(+455 files in other folders)
